Code cleanup: gofmt, gitignore credentials, clarify examples

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,9 @@ clab-*/
 
 # Test
 coverage.out
+
+# Config files (may contain credentials)
+/netsert.yaml
+/.netsert.yaml
+/baseline.yaml
+*.generated.yaml
