feat: add short path support for OpenConfig paths
   - Paths without leading / are expanded automatically
   - bgp[vrf], interface[name], ospf[vrf], isis[vrf], system/, lldp/
   - VRF/network-instance always visible in short form
   - Full paths (leading /) still work unchanged
   - Generators now output short paths by default

--- a/examples/assertions-no-creds.yaml
+++ b/examples/assertions-no-creds.yaml
@@ -4,11 +4,11 @@ targets:
     # No username/password - will use config file
     assertions:
       - name: Ethernet1 is UP
-        path: /interfaces/interface[name=Ethernet1]/state/oper-status
+        path: interface[Ethernet1]/state/oper-status
         equals: "UP"
 
   - host: clab-netsert-leaf1:6030
     assertions:
       - name: Ethernet1 is UP
-        path: /interfaces/interface[name=Ethernet1]/state/oper-status
+        path: interface[Ethernet1]/state/oper-status
         equals: "UP"
