--- a/examples/assertions-with-groups.yaml
+++ b/examples/assertions-with-groups.yaml
@@ -6,12 +6,12 @@ targets:
   - host: "@all"
     assertions:
       - name: Ethernet1 is UP
-        path: /interfaces/interface[name=Ethernet1]/state/oper-status
+        path: interface[Ethernet1]/state/oper-status
         equals: "UP"
 
   # Run specific assertions on spines only
   - host: "@spines"
     assertions:
       - name: Ethernet2 is UP (spine only)
-        path: /interfaces/interface[name=Ethernet2]/state/oper-status
+        path: interface[Ethernet2]/state/oper-status
         equals: "UP"
