feat: add BGP config to lab, simplify tutorial
- BGP neighbors pre-configured in startup configs
- Remove manual BGP setup step from tutorial
- Renumber tutorial steps

--- a/examples/lab/leaf1.cfg
+++ b/examples/lab/leaf1.cfg
@@ -16,5 +16,7 @@ interface Loopback0
 !
 ip routing
 !
-ip route 0.0.0.0/0 10.0.1.1
+router bgp 65001
+   router-id 10.255.1.1
+   neighbor 10.0.1.1 remote-as 65000
 !
