--- a/examples/lab/spine1.cfg
+++ b/examples/lab/spine1.cfg
@@ -20,3 +20,8 @@ interface Loopback0
 !
 ip routing
 !
+router bgp 65000
+   router-id 10.255.0.1
+   neighbor 10.0.1.2 remote-as 65001
+   neighbor 10.0.2.2 remote-as 65002
+!
