--- a/examples/lab/leaf2.cfg
+++ b/examples/lab/leaf2.cfg
@@ -16,5 +16,7 @@ interface Loopback0
 !
 ip routing
 !
-ip route 0.0.0.0/0 10.0.2.1
+router bgp 65002
+   router-id 10.255.2.1
+   neighbor 10.0.2.1 remote-as 65000
 !
