feat: add concurrent target processing
- Add --workers/-w flag for concurrent targets (default: 10)
- Add --parallel/-p flag for assertions per target (default: 5)
- Targets now processed in parallel, not sequentially
- Add workers/parallel to config file defaults
- Update README with Concurrency section

--- a/examples/netsert.yaml
+++ b/examples/netsert.yaml
@@ -5,6 +5,8 @@ defaults:
   username: admin
   password: admin
   insecure: true  # Skip TLS verification (use only in lab!)
+  workers: 10     # Concurrent targets (devices)
+  parallel: 5     # Concurrent assertions per target
 
 # Per-target overrides (optional)
 # targets:
