--- a/examples/lab/spine1.cfg
+++ b/examples/lab/spine1.cfg
@@ -25,3 +25,10 @@ router bgp 65000
    neighbor 10.0.1.2 remote-as 65001
    neighbor 10.0.2.2 remote-as 65002
 !
+router ospf 1
+   router-id 10.255.0.1
+   network 10.0.1.0/30 area 0.0.0.0
+   network 10.0.2.0/30 area 0.0.0.0
+   network 10.255.0.1/32 area 0.0.0.0
+   passive-interface Loopback0
+!
